--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
     
     <section class="home">
         <div class="informacoes">
-            <h1>Olá! sou o Marcelo Moraes</h1>
+            <h1>Olá! eu sou o Marcelo Moraes</h1>
             <p>Um desenvolvedor Frontend em formação apaixonado por tecnologia.</p>
             <p>Estou sempre me desafiando com novos projetos e buscando feedback na comunidade de programação, além de compartilhar meus conhecimentos.😁</p>
-            <p>Ah, também dou fã de jogos, filmes, series e animes. 💙</p>
+            <p>Ah, também sou fã de jogos, filmes, series, animes e HQs de super heróis Marvel e DC entre outros. 💙</p>
+            <p>Abaixo minhas redes sociais, entre em contato.</p>
             <ul class="redes-sociais">
                 <li><a href="https://www.linkedin.com/in/marcelopintomoraes/"" title="Ir para o Linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://wa.me/5515981283919" title="Enviar mensagem no Whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
@@ -65,7 +66,7 @@
     </section>
     
     <section class="projetos" id="projetos">
-        <h2 class="titulo">Meus Projetos</h2>
+        <h2 class="titulo">Veja meus Projetos</h2>
         <div class="container-projetos">
 
             <div class="projeto ativo">
@@ -74,6 +75,7 @@
                   <h3>Projeto 1</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                    <p>Projeto Desenvolvido durante os treinamentos da HashTag</p>  
                     <p>🔗 Ver no GitHub Pages</p>
                   </div>
                 </a>
