--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                   <h3>Projeto 2</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                    <p>Projeto Desenvolvido durante o treinamento do Desenvolvedor Uanela Como</p>
                     <p>🔗 Ver no GitHub Pages</p>
                   </div>
                 </a>
@@ -98,6 +99,7 @@
                   <h3>Projeto 3</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                    <p>Projeto Desenvolvido durante a semana de desenvolvimento da Digital Innovation One</p>
                     <p>🔗 Ver no GitHub Pages</p>
                   </div>
                 </a>
@@ -109,6 +111,7 @@
                   <h3>Projeto 4</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                    <p>Projeto Desenvolvido durante a semana de desenvolvimento da Dev Em Dobro</p>
                     <p>🔗 Ver no GitHub Pages</p>
                   </div>
                 </a>
@@ -120,6 +123,7 @@
                   <h3>Projeto 5</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                    <p>Projeto Desenvolvido durante a semana de desenvolvimento da Digital Innovation One</p>
                     <p>🔗 Ver no GitHub Pages</p>
                   </div>
                 </a>
