--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
               </div>
 
               <div class="projeto">
-                <a href="#" target="_blank">
-                  <img src="https://placehold.jp/515x700.png" alt="Projeto X-Men" />
+                <a href="https://arduinobymyself.github.io/MZUCK_Portifolio/" target="_blank">
+                  <img src="./src/imagens/MZUCK_Portifolio.jpg" alt="Projeto Portifolio Mark Zuckerberg" />
                   <h3>Projeto 6</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                    <p>Projeto executado durante as aulas do desenvolvedor Uanela Como</p>
                     <p>🔗 Ver no GitHub Pages</p>
                   </div>
                 </a>
