--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
 
               <div class="projeto">
                 <a href="#" target="_blank">
-                  <img src="https://placehold.jp/515x700.png" alt="Projeto X-Men" />
+                  <img src="./src/images/SmartWatch.jpg" alt="Projeto Smart Watch" />
                   <h3>Projeto 7</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                      <p>Projeto executado durante o treinamento da Hashtag Programador Front-End</p>
                     <p>🔗 Ver no GitHub Pages</p>
                   </div>
                 </a>
