--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </div>
 
               <div class="projeto">
-                <a href="#" target="_blank">
+                <a href="https://arduinobymyself.github.io/SmartWatch/" target="_blank">
                   <img src="./src/images/SmartWatch.jpg" alt="Projeto Smart Watch" />
                   <h3>Projeto 7</h3>
                   <div class="informacoes-projeto">
