--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
               <div class="projeto">
                 <a href="https://arduinobymyself.github.io/SmartWatch/" target="_blank">
-                  <img src="./src/images/SmartWatch.jpg" alt="Projeto Smart Watch" />
+                  <img src="./src/imagens/SmartWatch.jpg" alt="Projeto Smart Watch" />
                   <h3>Projeto 7</h3>
                   <div class="informacoes-projeto">
                     <p>Projeto feito usando HTML, CSS e JavaScript</p>
